examples/c/tests/data/incomplete.diag
error: invalid syntax, expected one of: '_Alignof', '&', '&&', <character constant>, '!', '__extension__', <floating constant>, '_Generic', <identifier>, '__imag__', <integer literal>, '(', '-', '--', '__builtin_offsetof', '+', '++', '__real__', 'sizeof', '*', <string literal>, '~', '__builtin_types_compatible_p', '__builtin_va_arg'
  ┌─ <input>:3:3
  │
3 │   int x = 2 +
  │   ^^^

error: invalid syntax, expected one of: '_Alignof', '&', '&&', <character constant>, '!', '__extension__', <floating constant>, '_Generic', <identifier>, '__imag__', <integer literal>, '(', '-', '--', '__builtin_offsetof', '+', '++', '__real__', 'sizeof', '*', <string literal>, '~', '__builtin_types_compatible_p', '__builtin_va_arg'
  ┌─ <input>:4:1
  │
4 │ }
  │ ^

