examples/c/tests/data/incomplete.c
void f() {
  g(1,
  int x = 2 +
}

void g() {}
